--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     region: oregon
     plan: free
     rootDir: server
-    buildCommand: npm install && npm run build
+    buildCommand: npm install --include=dev && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
